# exqudens-cpp-eval-conan-messages

./: cmake-export.sh  cmake-full-clean-export-all.sh  readme.md
exqudens-cpp-eval-conan-messages-lib/: CMakeLists.txt  conanfile.py  config.cmake.in
exqudens-cpp-eval-conan-messages-lib/src/main/cpp/exqudens/evaluation/: Messages.cpp  Messages.hpp
exqudens-cpp-eval-conan-messages-package-test/: CMakeLists.txt
exqudens-cpp-eval-conan-messages-test/: CMakeLists.txt  conanfile.py
exqudens-cpp-eval-conan-messages-test/src/test/cpp/: main.cpp
exqudens-cpp-eval-conan-messages-test/src/test/cpp/exqudens/evaluation/: MessagesTests.cpp  MessagesTests.hpp
